--- a/styles/style.css
+++ b/styles/style.css
@@ -1,279 +1,286 @@
-
 .header {
-    display: grid;
-    grid-template-columns: 1fr min-content 1fr;
-    align-items: center;
-    height: 295px;
-    margin-bottom: 0;
-    padding: 95px 50px 100px 50px;
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
+  align-items: center;
+  margin-bottom: 0;
+  padding: 92px 50px 96px 50px;
 }
 
 .header__logo {
-    display: block;
-    width: 150px;
-    height: 105px;
+  display: block;
+  width: 150px;
+  height: 105px;
 }
 
 .header__logo-image {
-    height: 100%;
+  height: 100%;
 }
 
 .header__links-list {
-    display: flex;
-    gap: 30px;
-    font-size: 18px;
-    font-weight: 400;
-    list-style: circle;
+  display: flex;
+  gap: 10px;
+  font-size: 18px;
+  font-weight: 400;
+  list-style: circle;
+  list-style-position: inside;
+  text-underline-offset: 4px;
 }
 
 .header__links-list-item_no-bullit {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 .header__link_active {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .address {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    max-width: 240px;
-    font-style: normal;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 1.35;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  font-style: normal;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.35;
+  text-underline-offset: 5px;
 }
 
 .header__address {
-    justify-self:end;
+  justify-self: end;
+  max-width: 240px;
+  text-underline-offset: 4px;
 }
 
 .cover {
-    position: relative;
-    z-index: -2;
-    padding: 165px 50px 50px 50px;
-    margin-bottom: 180px;
-    min-height: 760px;
-    background-image: url("../images/cover.jpg");
-    background-size: cover;
+  position: relative;
+  z-index: 0;
+  padding: 165px 50px 50px 50px;
+  margin-bottom: 180px;
+  min-height: 757px;
+  background-image: url("../images/cover.jpg");
+  background-size: cover;
 }
 
 .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    min-height: 100%;
-    min-width: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  min-height: 100%;
+  min-width: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
 .cover__title {
-    color: #fff;
-    margin-bottom: 105px;
-    font-weight: 700;
-    font-size: 100px;
-    line-height: 1.15;
-    letter-spacing: 25px;
-    text-transform: uppercase;
+  color: #fff;
+  margin-bottom: 106px;
+  font-weight: 700;
+  font-size: 100px;
+  line-height: 1.15;
+  text-transform: uppercase;
+  letter-spacing: 30px;
 }
 
 .aligned-text_left {
-    display: block;
-    text-align: left;
-    margin-bottom: 20px;
+  display: block;
+  text-align: left;
+  margin-bottom: 20px;
 }
 
 .aligned-text_center {
-    display: block;
-    text-align: center;
-    margin-bottom: 20px;
+  display: block;
+  text-align: center;
+  margin-bottom: 20px;
+  margin-right: -30px;
 }
 
 .aligned-text_right {
-    display: block;
-    text-align: right;
+  display: block;
+  text-align: right;
+  margin-right: -30px;
 }
 
 .cover__description {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .cover__description-text {
-    color: #fff;
-    font-weight: 400;
-    font-size: 22px;
-    line-height: 1.25;
-    word-spacing: 18px;
-    text-transform: uppercase;
+  color: #fff;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 1.25;
+  word-spacing: 18px;
+  text-transform: uppercase;
 }
 
 .bet-button {
-    height: 50px;
-    width: 255px;
-    padding: 12px 30px;
-    border: #fff 1px solid;
-    color: #fff;
-    background-color: transparent;
-    font-weight: 500;
-    font-size: 22px;
-    text-align: center;
-    text-transform: uppercase;
+  height: 51px;
+  width: 255px;
+  padding: 12px 30px;
+  border: #fff 1px solid;
+  color: #fff;
+  background-color: transparent;
+  font-weight: 500;
+  font-size: 22px;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .lots {
-    margin: 0 24px 120px 24px;
+  margin: 0 24px 120px 24px;
 }
 
 .lots__heading {
-    margin-left: 40px;
-    margin-bottom: 27px;
-    color: #000;
-    font-weight: 700;
-    font-size: 40px;
-    text-transform: uppercase;
+  margin-left: 40px;
+  margin-bottom: 27px;
+  color: #000;
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
 }
 
 .lots__card-list {
-    display: flex;
-    flex-wrap: wrap;
-    column-gap: 25px;
-    row-gap: 30px;
-    margin-bottom:  30px;
-    list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 25px;
+  row-gap: 30px;
+  margin-bottom: 30px;
+  list-style: none;
 }
 
 .lots__card-list-item {
-    width: 334px;
-    min-height: 595px;
+  width: 334px;
+  min-height: 595px;
 }
 
 .card-link,
 .card {
-    height: 100%;
+  height: 100%;
+  text-decoration: none;
 }
 
 .card {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    position: relative;
-    z-index: -2;
-    padding: 48px 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+  z-index: 0;
+  padding: 48px 40px;
+  background-position: center;
+  background-size: cover;
 }
 
 .card_type_film {
-    background-image: url("../images/card-lot-01.jpg");
-    background-position: center;
-    background-size: cover;
+  background-image: url("../images/card-lot-01.jpg");
 }
 
 .card_type_book {
-    background-image: url("../images/card-lot-02.jpg");
-    background-position: center;
-    background-size: cover;
+  background-image: url("../images/card-lot-02.jpg");
 }
 
 .card_type_picture {
-    background-image: url("../images/card-lot-03.jpg");
-    background-position: center;
-    background-size: cover;
+  background-image: url("../images/card-lot-03.jpg");
 }
 
 .card__title {
-    color: #fff;
-    font-weight: 700;
-    font-size: 22px;
-    line-height: 1.2;
-    text-transform: uppercase;
+  color: #fff;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 1.2;
+  text-transform: uppercase;
 }
 
 .card__text {
-    color: #fff;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 1.2;
+  color: #fff;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.2;
 }
 
 .lots__look-more-link {
-    margin-left: 40px;
-    color: #000;
-    font-weight: 400;
-    font-size: 20px;
+  margin-left: 40px;
+  color: #000;
+  font-weight: 400;
+  font-size: 20px;
+  text-underline-offset: 5px;
 }
 
 .about {
-    display: grid;
-    grid-template-columns: 334px auto;
-    column-gap: 25px;
-    margin-bottom: 180px;
-    margin-left: 24px;
-    margin-right: 24px;
+  display: grid;
+  grid-template-columns: 334px auto;
+  column-gap: 25px;
+  margin-bottom: 182px;
+  margin-left: 24px;
+  margin-right: 24px;
 }
 
 .about__logo {
-    display: flex;
-    margin: 0 auto;
-    justify-content: center;
-    align-items: center;
-    height: 240px;
-    width: 240px;
-    margin-top: 35px;
-    padding: 65px 45px;
-    border-radius: 50%;
-    background-color: black;
+  display: flex;
+  margin: 35px auto;
+  justify-content: center;
+  align-items: center;
+  height: 240px;
+  width: 240px;
+  padding: 64px 45px 62px 45px;
+  border-radius: 50%;
+  background-color: black;
 }
 
 .about__title {
-    margin-top: 133px;
-    margin-bottom: 100px;
-    color: #000;
-    font-weight: 700;
-    font-size: 40px;
-    text-transform: uppercase;
+  margin-top: 135px;
+  margin-bottom: 100px;
+  color: #000;
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
 }
 
 .about__text {
-    display: flex;
-    flex-direction: column;
-    row-gap: 24px;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 1.2;
+  display: flex;
+  flex-direction: column;
+  row-gap: 24px;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.2;
 }
+
+.spesial_width {
+  width: 688px;
+}
+
 .footer {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    min-height: 180px;
-    padding: 0 50px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  min-height: 180px;
+  padding: 0 50px;
 }
 
 .footer__menu {
-    justify-self: center;
+  justify-self: center;
 }
 
 .footer__menu-list {
-    font-size: 18px;
-    font-weight: 400;
-    list-style: none;
-    text-align: center;
+  font-size: 18px;
+  font-weight: 400;
+  list-style: none;
+  text-align: center;
+  text-underline-offset: 5px;
 }
 
 .footer__menu-link_active {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .footer__social-list {
-    display: flex;
-    justify-content: end;
-    column-gap: 48px;
-    list-style: none;
+  display: flex;
+  justify-content: end;
+  column-gap: 48px;
+  list-style: none;
 }
 
 .footer__social-icon {
-    height: 48px;
-    width: 48px;
+  height: 48px;
+  width: 48px;
 }
